--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "setup-rocq",
   "description": "GitHub Action to set up Rocq in CI workflows",
-  "version": "v1.2.0",
+  "version": "v1.3.0",
   "author": "Tej Chajed",
   "type": "module",
   "private": true,
@@ -41,6 +41,7 @@
     "@actions/cache": "^4.1.0",
     "@actions/core": "^1.11.1",
     "@actions/exec": "^1.1.1",
+    "@actions/glob": "^0.5.0",
     "@actions/io": "^2.0.0",
     "@actions/tool-cache": "^2.0.2",
     "yaml": "^2.8.2"
